tests/NormalTests/paczka1/small_fuzzy/18075155.err
Error in line 2: A451 S425 52,7
Error in line 6: Zb8ilFrdS0q S165 43,3
Error in line 3: A451 S165 77,0
